--- a/Wave/main.css
+++ b/Wave/main.css
@@ -5,7 +5,7 @@
 
 h1 {
     text-align: center;
-    background: #3bbbbf;
+    background: #2db1bd;
     font-family: monospace;
     font-size: 50px; 
 }
@@ -14,7 +14,7 @@ section {
     position: relative; 
     width: 100%; 
     height: 100vh; 
-    background: #3bbbbf; 
+    background: #2db1bd; 
     overflow: hidden;
 }
 
